@@ -1,5 +1,7 @@
 version 0.97.0
+	* Completely reworked air units (much more similar to the original game)
 	* Air unit limit increases with (ground) unit limit
+	* Option: Rotate air unit graphics smoothly (option is off by default)
 	* Update fmt library to version 3.0.2
 	* Bugfix (Bug #77) Window moves to primary screen on resolution change (Reported by Urs Enke)
 	* Bugfix (Bug #81) Wrong "Built Object" stats (Reported by Urs Enke)
